完成从购物车前往交易页面，合并cookie和数据库中勾选的商品

--- a/gmall-order-web/src/main/resources/templates/tradeFail.html
+++ b/gmall-order-web/src/main/resources/templates/tradeFail.html
@@ -3,8 +3,8 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<script src="../static/js/jquery-3.1.1.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="../static/css/JD2.css" />
+		<script src="js/jquery-3.1.1.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/JD2.css" />
 
 		<title></title>
 	</head>
@@ -15,7 +15,7 @@
 			<div class="header">
 				<ul class="header-left">
 					<li>
-						<img src="../static/img/header_1.png"/>
+						<img src="img/header_1.png"/>
 						<a href="">首页</a>
 					</li>
 					<li class="header-l-2">
@@ -41,9 +41,9 @@
 
 		<!--logo图片-->
 		<div class="top-1">
-			<img src="../static/img/logo1.jpg" class="img1"  /><span>下单失败</span>
+			<img src="img/logo1.jpg" class="img1"  /><span>下单失败</span>
 			<!--右侧绿色-->
-			<img src="../static/img/08.png" class="img2" />
+			<img src="img/08.png" class="img2" />
 		</div>
 
 		<!--主体部分-->
