--- a/gmall-cart-web/src/main/resources/templates/cartList.html
+++ b/gmall-cart-web/src/main/resources/templates/cartList.html
@@ -86,7 +86,7 @@
 
                     <div>
                         <ol>
-                            <li><input type="checkbox" class="check" onchange="checkSku(this)"/></li>
+                            <li><input type="checkbox" th:checked="${cartInfo.isChecked}==1" class="check" th:value="${cartInfo.skuId}" onchange="checkSku(this)"/></li>
                             <li>
                                 <dt><img th:src="${cartInfo.imgUrl}" alt=""></dt>
                                 <dd th:onclick="'toItem('+${cartInfo.skuId}+')'">
