--- a/gmall-order-web/src/main/resources/templates/trade.html
+++ b/gmall-order-web/src/main/resources/templates/trade.html
@@ -3,8 +3,8 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<script src="../static/js/jquery-3.1.1.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="../static/css/JD2.css" />
+		<script src="js/jquery-3.1.1.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/JD2.css" />
 
 		<title></title>
 	</head>
@@ -15,7 +15,7 @@
 			<div class="header">
 				<ul class="header-left">
 					<li>
-						<img src="../static/img/header_1.png"/>
+						<img src="img/header_1.png"/>
 						<a href="">首页</a>
 					</li>
 					<li class="header-l-2">
@@ -41,9 +41,9 @@
 
 		<!--logo图片-->
 		<div class="top-1">
-			<img src="../static/img/logo1.jpg" class="img1" /><span>结算页</span>
+			<img src="img/logo1.jpg" class="img1" /><span>结算页</span>
 			<!--右侧绿色-->
-			<img src="../static/img/08.png" class="img2" />
+			<img src="img/08.png" class="img2" />
 		</div>
 
 		<!--主体部分-->
@@ -60,9 +60,9 @@
 			<!--地址-->
 			<div class="top-3">
 				<ul >
-				 <li class=".address default selected"  >
-					 <input   name="deliveryAddress" type="radio"  value=""  checked="true">
-					<span  >收件人AAAA </span><span    >具体地址111 </span>
+				 <li class=".address default selected" th:each="userAddress :${userAddressList}" >
+					 <input   name="deliveryAddress" type="radio" th:checked="${userAddress.isDefault}==1" value=""  checked="true">
+						<span th:text="${userAddress.consignee}" >收件人AAAA </span><span  th:text="${userAddress.userAddress}"  >具体地址111 </span>
 				 </li>
 				</ul>
 			</div>
@@ -86,10 +86,10 @@
 			<div class="to_right">
 				<h5>商家：自营</h5>
 				<!--图片-->
-				<div class="yun1"  >
-					<img  src="" class="yun"/>
+				<div class="yun1" th:each="orderDetail: ${orderDetailList}" >
+					<img  src="" th:src="${orderDetail.imgUrl}" class="yun"/>
 					<div class="mi">
-						<div><p style="width: 500px;" >商品名称111111111111 </p> <span style="float: right"> <span align="center" style="color: red" >   </span> <span   > X 1   </span> <span  >有货</span>  <span  >无货</span>  </span> </div>
+						<div><p style="width: 500px;" th:text="${orderDetail.skuName}" >商品名称111111111111 </p> <span style="float: right"> <span align="center" style="color: red" >   </span> <span  th:text="'X'+${orderDetail.skuNum}" > X 1   </span> <span  >有货</span>  <span  >无货</span>  </span> </div>
 
 					</div>
 				</div>
@@ -107,13 +107,11 @@
 		</div>
 		<div class="xia">
 
-
-
 			<div class="yfze">
-				<p class="yfze_a"><span class="z">应付总额：</span><span class="hq" > ￥99999</span></p>
+				<p class="yfze_a"><span class="z">应付总额：</span><span class="hq" th:text="${totalAmount}" > ￥99999</span></p>
 
 
-			<button id="submitButton" class="tijiao">提交订单</button>
+			<button id="submitButton" class="tijiao" >提交订单</button>
 		</div>
 		</div>
 
@@ -122,12 +120,19 @@
 			<input name="deliveryAddress" id="deliveryAddress" type="hidden"/>
 			<input name="paymentWay" id="paymentWay" type="hidden"/>
 			<input name="orderComment" id="orderComment" type="hidden"/>
-			<span  >
-				<input name="orderDetailList[0].skuId'" type="hidden"    value="" />
-				<input name="orderDetailList[0].skuNum'" type="hidden"    value="" />
-				<input name="orderDetailList[0].orderPrice'" type="hidden"    value="" />
+			<!--订单明细，送货清单 取得集合下班 stat.index-->
+			<span th:each="orderDetail,stat: ${orderDetailList}" >
+				<input th:name="'orderDetailList['+${stat.index}+'].skuId'" type="hidden"   th:value="${orderDetail.skuId}" />
+				<input th:name="'orderDetailList['+${stat.index}+'].skuNum'" type="hidden"    th:value="${orderDetail.skuNum}" />
+				<input th:name="'orderDetailList['+${stat.index}+'].orderPrice'" type="hidden"    th:value="${orderDetail.orderPrice}" />
+      			<input th:name="'orderDetailList['+${stat.index}+'].skuName'" type="hidden"    th:value="${orderDetail.skuName}" />
+
+				<!--<input name="orderDetailList[0].skuId'" type="hidden"    value="" />-->
+				<!--<input name="orderDetailList[0].skuNum'" type="hidden"    value="" />-->
+				<!--<input name="orderDetailList[0].orderPrice'" type="hidden"    value="" />-->
 			</span>
-			<input name="tradeNo" type="hidden"  value=""  />
+			<!--放code=tradeNo-->
+			<input name="tradeNo" type="hidden"  th:value="${tradeNo}"  />
 		</form>
 		<script>
             $(function() {
